--- a/helm/frontend/values.yaml
+++ b/helm/frontend/values.yaml
@@ -6,9 +6,9 @@ replicaCount: 1
 
 image:
   repository: trnsprntt/internship_devops_frontend
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: latest
+  tag: "latest"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -40,6 +40,8 @@ service:
   type: LoadBalancer
   port: 3000
 
+backend: http://backend:5000
+
 ingress:
   enabled: true
   annotations:
@@ -47,12 +49,12 @@ ingress:
     kubernetes.io/ingress.class: nginx
     kubernetes.io/tls-acme: "true"
   hosts:
-    - host: trnsprntt.backend.com
-      paths:
-      - path: /api
-        backend:
-          serviceName: backend
-          servicePort: 5000
+    # - host: trnsprntt.backend.com
+    #   paths:
+    #   - path: /api
+    #     backend:
+    #       serviceName: backend
+    #       servicePort: 5000
     - host: trnsprntt.frontend.com
       paths:
       - path: /
@@ -81,7 +83,7 @@ autoscaling:
   minReplicas: 1
   maxReplicas: 10
   targetCPUUtilizationPercentage: 80
-  targetMemoryUtilizationPercentage: 80
+  # targetMemoryUtilizationPercentage: 80
 
 nodeSelector: {}
 
